[tool.poetry]
name = "spark"
version = "0.1.0"
description = ""
authors = [ "lars.gohr@powerco.de" ]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
pyspark = "^3.5.1"
pytest = "^8.2.2"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
